force-app/main/default/objects/Service_Agent_Queue__c/Service_Agent_Queue__c.object-meta.xml
<CustomObject>
    <label>Service Agent Queue</label>
    <nameField>
        <label>Membership Number</label>
        <displayFormat>SAQ-{0000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Agent Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>