force-app/main/default/objects/Service_Agent_Queue__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>Queue Memberships</relationshipLabel>
    <relationshipName>Queue_Memberships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>