force-app/main/default/objects/Service_Agent_Queue__c/fields/Membership_Key__c.field-meta.xml
<CustomField>
    <fullName>Membership_Key__c</fullName>
    <description>AgentId-QueueId. Prevents duplicate memberships.</description>
    <label>Membership Key</label>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>