force-app/main/default/objects/Service_Agent_Queue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>1 = primary queue for this agent. Higher numbers are fallback queues.</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>1</defaultValue>
</CustomField>