force-app/main/default/objects/Service_Agent_Queue__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>Service_Queue__c</referenceTo>
    <relationshipLabel>Agent Memberships</relationshipLabel>
    <relationshipName>Agent_Memberships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>