force-app/main/default/objects/Service_Agent_Queue__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <description>1-5. Skill Based routing prefers the highest level available.</description>
    <label>Skill Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>3</defaultValue>
</CustomField>